<resources>
    <string name="app_name">RateMyCulture</string>
    <string name="sign_in">Sign In </string>
    <string name="sign_up"><u>Sign up</u> </string>
    <string name="sign_up_title">Sign up</string>
    <string name="mail">E-Mail</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Username</string>
    <string name="confirm_password_hint">Confirm Password </string>
    <string name="login">LOGIN</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="connect_with">or connect with</string>
    <string name="account_question">Don\'t have account?</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="error_title">Error</string>
    <string name="error_message_login">Please enter email and password.</string>
    <string name="ok">OK</string>
    <string name="error_message_sign_up">Unsuccessful Sign up</string>
    <string name="retry">Please Retry</string>
    <string name="sign_in_successful">Sign in Successful</string>
    <string name="sign_up_successful">Sign up Successful</string>
    <string name="password_not_match">Password does not match</string>
    <string name="web_client_id">945609598109-h821tustjgendev93mkli7feff567ido.apps.googleusercontent.com</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_required_toast">Permission Required!</string>
    <string name="permission_rationale_location">Permission</string>
    <string name="location_permission_denied">Permission Denied.</string>
    <string name="choose_image_from_gallery">Choose image from gallery</string>
    <string name="take_photo">Take photo</string>
    <string name="delete_photo">Delete photo</string>
</resources>